<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.DetailPersonFragment"
    android:orientation="vertical">
    <com.jhostinluna.sprint4.ui.views.LayoutItemPerson
        android:id="@+id/itemPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:image="@drawable/baseline_person_24"
        app:textName="@string/textName"
        tools:textValue="Maria garcia Perez"/>

    <com.jhostinluna.sprint4.ui.views.LayoutItemPerson
        android:id="@+id/itemPersonColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:image="@drawable/pantone"
        app:textName="@string/textVFavoriteColor"
        app:textValue="Morado"/>

    <com.jhostinluna.sprint4.ui.views.LayoutItemPerson
        android:id="@+id/itemPersonDateBorn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:image="@drawable/pastel"
        app:textName="@string/textVDateBorn"
        tools:textValue="18/05/2000"/>

    <com.jhostinluna.sprint4.ui.views.LayoutItemPerson
        android:id="@+id/itemPersonCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:image="@drawable/ciudad"
        app:textName="@string/textCity"
        tools:textValue="Madrid"/>

    <com.jhostinluna.sprint4.ui.views.LayoutItemPerson
        android:id="@+id/itemPersonNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:image="@drawable/bloques_numericos"
        app:textName="@string/textFavoriteNumber"
        tools:textValue="9"/>
    <Button
        android:id="@+id/buttonSeeDetail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/textSeeDetail"/>
</LinearLayout>